--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -88,6 +88,7 @@
         <item name="android:paddingEnd">40dp</item>
         <item name="android:imeOptions">actionDone</item>
         <item name="singleLine">true</item>
+        <item name="android:textCursorDrawable">@drawable/text_cursor</item>
     </style>
 
     <style name="searchTrackFirstTitle">
