--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -89,6 +89,7 @@
         <item name="android:paddingEnd">40dp</item>
         <item name="android:imeOptions">actionDone</item>
         <item name="singleLine">true</item>
+        <item name="android:textCursorDrawable">@drawable/text_cursor</item>
     </style>
 
     <style name="searchTrackFirstTitle">
@@ -194,6 +195,9 @@
 
     <!-- BottomNavigationView -->
     <style name="BottomNavigationViewStyle">
+        <item name="itemBackground">@drawable/item_bg</item>
+        <item name="itemPaddingTop">@dimen/margin8</item>
+        <item name="itemPaddingBottom">@dimen/margin10</item>
         <item name="itemIconTint">@color/bottom_nav_selector</item>
         <item name="itemTextColor">@color/bottom_nav_selector</item>
         <item name="itemTextAppearanceActive">@style/BottomNavText</item>
