--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,6 +4,8 @@
         <!-- Customize your light theme here. -->
         <item name="android:background">@color/white</item>
         <item name="android:textColor">@color/lightBlack</item>
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorOnPrimary">@color/lightBlack</item>
         <item name="colorSecondary">@color/blue</item>
         <item name="android:statusBarColor">@color/white</item>
         <item name="android:windowLightStatusBar">true</item>
