--- a/app/src/main/res/layout/fragment_add_playlist.xml
+++ b/app/src/main/res/layout/fragment_add_playlist.xml
@@ -83,6 +83,7 @@
         android:layout_height="44dp"
         android:layout_marginHorizontal="@dimen/margin16"
         android:layout_marginBottom="@dimen/margin32"
+        android:background="@drawable/button_back_shape"
         android:enabled="false"
         android:text="@string/create"
         android:textAllCaps="false"
